--- a/settings.gradle
+++ b/settings.gradle
@@ -30,3 +30,5 @@ rootProject.name = "spring"
 rootProject.children.each {project ->
 	project.buildFileName = "${project.name}.gradle"
 }
+include 'spring-learn'
+
